--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   qr_code_scanner: ^0.5.2
   permission_handler: ^8.1.6
   url_launcher: 6.0.10
+  google_maps_flutter: ^2.0.9
+  location: ^4.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
